fix typescript output

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@cucumber/gherkin": "^26.0.3",
     "@cucumber/messages": "^21.0.1",
+    "@playwright/test": "^1.30.0",
     "glob": "^8.1.0"
   },
   "devDependencies": {
