--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "acorn": "^8.8.2",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
+    "source-map": "^0.7.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
