--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@cucumber/gherkin": "^26.0.3",
     "@cucumber/messages": "^21.0.1",
     "@playwright/test": "^1.31.1",
-    "glob": "^8.1.0"
+    "glob": "^8.1.0",
+    "source-map": "^0.7.4"
   },
   "devDependencies": {
     "@types/acorn": "^6.0.0",
@@ -42,7 +43,6 @@
     "acorn": "^8.8.2",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
-    "source-map": "^0.7.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
