--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "playwright-gherkin",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Generate Playwright test-runner code from gherkin files!",
   "main": "lib/index.js",
   "type": "module",
@@ -10,7 +10,7 @@
     "url": "https://github.com/lucaelin/playwright-gherkin.git"
   },
   "bugs": {
-    "url" : "https://github.com/lucaelin/playwright-gherkin/issues"
+    "url": "https://github.com/lucaelin/playwright-gherkin/issues"
   },
   "scripts": {
     "build": "tsc",
@@ -30,24 +30,26 @@
     "library"
   ],
   "dependencies": {
-    "@cucumber/gherkin": "^26.0.3",
-    "@cucumber/messages": "^21.0.1",
-    "@playwright/test": "^1.31.1",
-    "glob": "^8.1.0",
-    "source-map": "^0.7.4"
+    "glob": "^10.2.2",
+    "source-map": "^0.7.4",
+    "@cucumber/gherkin": "^26.2.0",
+    "@cucumber/messages": "^22.0.0"
   },
   "devDependencies": {
     "@types/acorn": "^6.0.0",
-    "@types/chai": "^4.3.4",
-    "@types/estree": "^1.0.0",
+    "@types/chai": "^4.3.5",
+    "@types/estree": "^1.0.1",
     "@types/expect": "^24.3.0",
-    "@types/glob": "^8.0.1",
+    "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
-    "@typescript-eslint/parser": "^5.53.0",
+    "@typescript-eslint/parser": "^5.59.2",
     "acorn": "^8.8.2",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "@playwright/test": "^1.33.0"
   }
 }
